--- a/composer.json
+++ b/composer.json
@@ -40,8 +40,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Mbsoft\\SlrRanking\\Tests\\": "tests/",
-            "Workbench\\App\\": "workbench/app/"
+            "Mbsoft\\SlrRanking\\Tests\\": "tests/"
         }
     },
     "scripts": {
